# user-app/src/main/resources/static/api/swagger.yml
@@ -51,7 +51,7 @@ paths:
           description: "User or password weren't correct"
         500:
           description: "A generic backend error occurred"
-  /v1/update:
+  /v1/users/update:
     put:
       tags:
         - update
@@ -68,6 +68,30 @@ paths:
           description: "Password was successfully updated"
         400:
           description: "Client did not send the password correctly"
+        500:
+          description: "A generic backend error occurred"
+  /v1/users/{username}:
+    get:
+      summary: Get existing user
+      operationId: getUser
+      parameters:
+        - in: path
+          name: username
+          schema:
+            type: string
+          required: true
+          description: Username of the user to get
+      responses:
+        200:
+          description: "User was successfully received"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserDTO"
+        400:
+          description: "Client did not send the server info correctly"
+        403:
+          description: "User or password weren't correct"
         500:
           description: "A generic backend error occurred"
 components:
@@ -100,4 +124,18 @@ components:
         - newPassword
       properties:
         newPassword:
+          type: string
+    UserDTO:
+      type: object
+      required:
+        - id
+        - fullName
+        - username
+      properties:
+        id:
+          type: integer
+          format: int64
+        fullName:
+          type: string
+        username:
           type: string
